# gitbucket

./: .bazelrc  WORKSPACE  add_build_files.py  dependencies.yaml
src/main/java/: BUILD.bazel
src/main/java/gitbucket/core/util/: BUILD.bazel
src/main/scala/: BUILD.bazel  ScalatraBootstrap.scala
src/main/scala/gitbucket/core/: BUILD.bazel
src/main/scala/gitbucket/core/api/: BUILD.bazel
src/main/scala/gitbucket/core/controller/: AccountController.scala  BUILD.bazel  ControllerBase.scala  FileUploadController.scala  IndexController.scala  IssuesController.scala  LabelsController.scala  PrioritiesController.scala  PullRequestsController.scala  ReleasesController.scala  RepositorySettingsController.scala  RepositoryViewerController.scala  SystemSettingsController.scala  WikiController.scala
src/main/scala/gitbucket/core/controller/api/: ApiGitReferenceControllerBase.scala  ApiPullRequestControllerBase.scala  ApiReleaseControllerBase.scala  ApiRepositoryBranchControllerBase.scala  ApiRepositoryCommitControllerBase.scala  ApiRepositoryContentsControllerBase.scala  ApiRepositoryControllerBase.scala  BUILD.bazel
src/main/scala/gitbucket/core/model/: BUILD.bazel  Profile.scala
src/main/scala/gitbucket/core/plugin/: BUILD.bazel  Plugin.scala  PluginRegistry.scala  PluginRepository.scala
src/main/scala/gitbucket/core/service/: AccountFederationService.scala  BUILD.bazel  CommitsService.scala  HandleCommentService.scala  IssuesService.scala  MergeService.scala  PullRequestService.scala  RepositoryCommitFileService.scala  RepositoryCreationService.scala  RepositorySearchService.scala  RepositoryService.scala  SystemSettingsService.scala  WikiService.scala
src/main/scala/gitbucket/core/servlet/: BUILD.bazel  GitLfsTransferServlet.scala  GitRepositoryServlet.scala  InitializeListener.scala  SessionCleanupListener.scala  TransactionFilter.scala
src/main/scala/gitbucket/core/ssh/: GitCommand.scala  SshServerListener.scala
src/main/scala/gitbucket/core/util/: BUILD.bazel  EditorConfigUtil.scala  JGitUtil.scala
src/main/scala/gitbucket/core/util/db/: BUILD.bazel  DatabaseConfig.scala  Directory.scala  SyntaxSugars.scala
src/main/scala/gitbucket/core/view/: BUILD.bazel
src/main/twirl/gitbucket/core/admin/: settings.scala.html  settings_system.scala.html
src/test/scala/gitbucket/core/: BUILD.bazel
src/test/scala/gitbucket/core/api/: BUILD.bazel
src/test/scala/gitbucket/core/model/: BUILD.bazel
src/test/scala/gitbucket/core/service/: BUILD.bazel  MergeServiceSpec.scala  ServiceSpecBase.scala
src/test/scala/gitbucket/core/ssh/: BUILD.bazel
src/test/scala/gitbucket/core/util/: BUILD.bazel  GitSpecUtil.scala  JGitUtilSpec.scala
src/test/scala/gitbucket/core/view/: BUILD.bazel  PaginationSpec.scala
toolchains/: BUILD.bazel
