# //toolchains/BUILD
load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "gitbucket_impl",
    scalacopts = ["-deprecation", "-language:postfixOps", "-opt:l:method", "-Xfuture"],
    unused_dependency_checker_mode = "off",
    visibility = ["//visibility:public"]
)

toolchain(
    name = "gitbucket_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    toolchain = "gitbucket_impl",
    visibility = ["//visibility:public"]
)