package(default_visibility = ["//visibility:public"])

scala_library(
    name = "java",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    runtime_deps = [
    ],
    deps = [
        "@org_eclipse_jetty_jetty_server//jar",
        "@org_eclipse_jetty_jetty_servlet//jar",
        "@org_eclipse_jetty_jetty_util//jar",
        "@org_eclipse_jetty_jetty_webapp//jar",
    ],
)
