package(default_visibility = ["//visibility:public"])

scala_library(
    name = "plugin",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    runtime_deps = [
    ],
    deps = [
        "//src/main/scala/gitbucket/core/util/db",
        "@io_github_gitbucket_solidbase//jar",
        "@javax_servlet_javax_servlet_api//jar",
    ],
)
