package(default_visibility = ["//visibility:public"])

scala_library(
    name = "util",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    runtime_deps = [
    ],
    deps = [
        "//src/main/scala/gitbucket/core/util/db",
        "@com_typesafe_slick_slick_2_12//jar",
        "@javax_servlet_javax_servlet_api//jar",
        "@org_apache_tika_tika_core//jar",
        "@org_ec4j_core_ec4j_core//jar",
        "@org_eclipse_jgit_org_eclipse_jgit//jar",
        "@scalac_rules_commons_io",
    ],
)
