package(default_visibility = ["//visibility:public"])

scala_library(
    name = "view",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    runtime_deps = [
    ],
    deps = [
        "@com_nimbusds_nimbus_jose_jwt//jar",
        "@io_bazel_rules_scala_scala_library",
        "@io_github_gitbucket_markedj//jar",
        "@org_json4s_json4s_core_2_12//jar",
        "@org_json4s_json4s_jackson_2_12//jar",
    ],
)
