package(default_visibility = ["//visibility:public"])

scala_library(
    name = "api",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    runtime_deps = [
    ],
    deps = [
        "//src/main/scala/gitbucket/core/util/db",
        "@io_bazel_rules_scala_scala_library",
        "@org_eclipse_jgit_org_eclipse_jgit//jar",
    ],
)
