package(default_visibility = ["//visibility:public"])

scala_library(
    name = "db",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    runtime_deps = [
    ],
    deps = [
        "@com_github_takezoe_blocking_slick_32_2_12//jar",
        "@com_typesafe_config//jar",
        "@com_typesafe_slick_slick_2_12//jar",
        "@org_eclipse_jgit_org_eclipse_jgit//jar",
        "@org_liquibase_liquibase_core//jar",
        "@scalac_rules_commons_io",
    ],
)
